test/cbmc/negative_tests/assert/assert_harness.c
../../aws-templates-for-cbmc-proofs/template-for-repository/negative_tests/assert/assert_harness.c